# tesseract-python

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
src/tesseract_decoder/: __init__.py  core.py  decoder.py  runner.py  utils.py
tests/: test_core.py  test_decoder.py  test_utils.py
